[gd_scene load_steps=7 format=3 uid="uid://b3l57gnlln63g"]

[ext_resource type="Script" path="res://scripts/scenes/combat.gd" id="1_n5yyl"]
[ext_resource type="Script" path="res://scripts/managers/combat_manager.gd" id="2_305ab"]
[ext_resource type="Script" path="res://scripts/managers/hand_manager.gd" id="3_bdk6y"]
[ext_resource type="Script" path="res://scripts/managers/pause_manager.gd" id="5_pl43j"]
[ext_resource type="Script" path="res://scripts/player.gd" id="7_dwwk6"]
[ext_resource type="Texture2D" uid="uid://dyx76tn885md3" path="res://assets/ui/energy_orb.png" id="9_e0ys4"]

[node name="Combat" type="Node2D"]
script = ExtResource("1_n5yyl")

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("2_305ab")

[node name="HandManager" type="Node" parent="."]
script = ExtResource("3_bdk6y")

[node name="PauseManager" type="Node" parent="."]
script = ExtResource("5_pl43j")

[node name="Player" type="Node2D" parent="."]
position = Vector2(300, 300)
script = ExtResource("7_dwwk6")

[node name="Visual" type="ColorRect" parent="Player"]
offset_right = 100.0
offset_bottom = 100.0
color = Color(0, 1, 0, 1)

[node name="HealthLabel" type="Label" parent="Player"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 70
text = "40/40"

[node name="EnemiesContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 20
alignment = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HandContainer" type="HBoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -300.0
offset_right = 576.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="EndTurnMarginContainer" type="MarginContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="EndTurnButton" type="Button" parent="UI/HUD/EndTurnMarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "End turn"

[node name="EnergyMarginContainer" type="MarginContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 250.0
grow_horizontal = 0

[node name="EnergyTexture" type="TextureRect" parent="UI/HUD/EnergyMarginContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_e0ys4")
expand_mode = 1

[node name="EnergyLabel" type="Label" parent="UI/HUD/EnergyMarginContainer/EnergyTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 140
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
